play-pit/Collaboration/RocketChat/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rocketchat
  labels:
    name: rocketchat
